syntax = "proto3";
import "google/protobuf/empty.proto";
import "./common.proto";

package account;

service AccountsService {
  rpc FindOne (AccountsQuery) returns (Account) {}
  rpc FindByIds (AccountsQuery) returns (Accounts) {}
  rpc GetAll (google.protobuf.Empty) returns (Accounts) {}
  rpc DeleteOne (AccountsQuery) returns (Account) {}
  rpc UpdateOne (Account) returns (Account) {}
  rpc CreateOne (ChangeAccountQuery) returns (Account) {}
  
  rpc CanWithdraw (CanWithdrawQuery) returns (common.Status) {}
  rpc TransferP2p (TransferQuery) returns (Accounts) {}

  // rpc Withdraw (TransferQuery) returns (Transfer) {}
  // rpc Deposit (TransferQuery) returns (Transfer) {}
  // rpc Commit (Transfer) returns (Transfer) {}
  // rpc Rollback (Transfer) returns (Transfer) {}
}

message AccountsQuery {
  optional string id = 1;
  repeated string ids = 2;
}

message CanWithdrawQuery {
  string id = 1;
  int32 amount = 2;
}
message TransferQuery {
  optional string fromAccountId = 1;
  optional int32 fromAmount = 2;
  optional string toAccountId = 3;
  optional int32 toAmount = 4;
}

message ChangeAccountQuery {
  optional string currency = 1;
  optional string withOverdraft = 2;
}

message Account {
  string id = 1;
  common.Currency balance = 2;
  bool withOverdraft = 3;
}

message Accounts {
  repeated Account items = 1;
}